# libhuecpp

./: meson.build
include/: bridge.h  meson.build
include/src/: bridge.h
src/: bridge.cpp  meson.build
test/: bridge.cpp  meson.build
